--- a/advent.css
+++ b/advent.css
@@ -376,40 +376,46 @@ h1.info{
 /* Fancybox info image */
 
 div.infoimg{
-    float:left;
-    border:1px solid white;
-    width:250px;
-    margin-left:10px;
+    float:right;
+    width:30%;
+    height:auto;
+    margin: 10px 10px 10px 2%;
     background-color:black;
 }
 
 img.infoimg{
-    float: left;
     width:100%;
-    height:auto;
     /*border:1px solid red;*/
 }
 
+div.infoimg p.credit{
+    font-size:x-small;
+    font-style:italic;
+    color:white;
+}
 
 /* Fancybox info text */
 
 div.infotxt{
     float:left;
     overflow: auto;
-    width:250px;
+    width:95%;
     height:100%;
-    margin-left:10px;
+    margin-left:2%;
+    margin-right:2%;
     background-color: #ffffff;
-    padding-left: 10px;
-    padding-right:10px;
+    /*padding-left: 2%;
+    padding-right:2%;*/
     box-shadow:inset 0 0 10px #000000;
     -moz-box-shadow:inset 0 0 10px #000000;
     -webkit-box-shadow:inset 0 0 10px #000000;
 }
 
-p.notes{
+div.infotxt p, p.notes{
     color:#000000;
     font-size:0.8em;
+    margin-left:2%;
+    margin-top:2%;
 }
 
 p.more{
