--- a/advent.css
+++ b/advent.css
@@ -88,6 +88,7 @@ span.date{
     text-align:right;
     vertical-align:top;
     padding-right:10px;
+    padding-left:10px;
 }
 
 /*DEFAULT BOX STYLE (FUTURE DAYS)*/
