--- a/advent.css
+++ b/advent.css
@@ -49,7 +49,7 @@ div.title{
     position:absolute;
     left:2%;
     top:2%;
-    width:100%;
+    /*width:100%;*/
     height:5%;
     z-index:90;
     text-align:left;
