removed BG colour

--- a/advent.css
+++ b/advent.css
@@ -2,7 +2,7 @@
 
 /* BACKGROUND STYLES*/
 body {
-    background-color: #333333;
+    /*background-color: #333333;*/
     padding: 0px;
     margin: 0px;
     color: #ffffff;
