--- a/advent.css
+++ b/advent.css
@@ -31,10 +31,21 @@ div.advent{
 }
 div.bgimg-credit{
     position:absolute;
-    bottom:0px;
-    right:0px;
+    bottom:5px;
+    right:10px;
     font-size:0.8em;
+    color:#969696;
 }
+div.bgimg-credit a{
+    color:#ffffff;
+    font-weight:bold;
+    text-decoration: none;
+}
+div.bgimg-credit a:hover{
+    text-decoration: underline;
+    color:#009696;
+}
+
 /*TITLE STYLES*/
 
 div.title-bg{
@@ -435,13 +446,21 @@ div.infotxt{
     -webkit-box-shadow:inset 0 0 10px #000000;
 }
 
-div.infotxt p, p.notes{
+div.infotxt p{
     color:#000000;
     font-size:0.8em;
     margin-left:2%;
     margin-top:2%;
 }
-
+div.infotxt p a{
+    text-decoration:none;
+    font-weight: bold;
+    color:#0000cc;
+}
+div.infotxt p a:hover{
+    text-decoration:underline;
+    color:#cc0000;
+}
 p.more{
     font-size:1em;
     font-weight:bold;
@@ -459,131 +478,3 @@ p.more a:hover{
 div.fbclear{
     clear:both;
 }
-
-/*BOX POSITIONING*/
-/*
-#d1{
-    left:20px;
-    top:500px;
-}
-
-#d2{
-    left:50px;
-    top:300px;
-}
-
-#d3{
-    left:10px;
-    top:60px;
-}
-
-#d4{
-    left:600px;
-    top:800px;
-}
-
-#d5{
-    left:330px;
-    top:250px;
-}
-
-#d6{
-    left:450px;
-    top:600px;
-}
-
-#d7{
-    left:40px;
-    top:800px;
-}
-
-#d8{
-    left:300px;
-    top:650px;
-}
-
-#d9{
-    left:550px;
-    top:60px;
-}
-
-#d10{
-    left:300px;
-    top:400px;
-}
-
-#d11{
-    left:450px;
-    top:750px;
-}
-
-#d12{
-    left:600px;
-    top:200px;
-}
-
-#d13{
-    left:175px;
-    top:100px;
-}
-
-#d14{
-    left:225px;
-    top:815px;
-}
-
-#d15{
-    left:570px;
-    top:500px;
-}
-
-#d16{
-    left:190px;
-    top:320px;
-}
-
-#d17{
-    left:60px;
-    top:630px;
-}
-
-#d18{
-    left:90px;
-    top:200px;
-}
-
-#d19{
-    left:580px;
-    top:370px;
-}
-
-#d20{
-    left:150px;
-    top:420px;
-}
-
-#d21{
-    left:470px;
-    top:270px;
-}
-
-#d22{
-    left:430px;
-    top:460px;
-}
-
-#d23{
-    left:320px;
-    top:90px;
-}
-
-#d24{
-    left:580px;
-    top:670px;
-}
-
-#d25{
-    left:280px;
-    top:520px;
-}
-*/
