highlight "today" from the start

--- a/advent.css
+++ b/advent.css
@@ -323,7 +323,7 @@ div.open .numb{
     opacity:1.;
 }
 
-div.open{
+div.today{
     /*border:1px solid #ff5555;*/
     /*box-shadow:0 0 10px black;*/
     -moz-box-shadow:0 0 10px white;
